--- a/stylesheet-works.css
+++ b/stylesheet-works.css
@@ -6,19 +6,19 @@ body{
 	font-size: 20px;
     line-height: 1.618;
     color: white;
-
-
-   width: 1000px;
-   margin: 600px auto 600px auto;
-   background-image: url(../hw17-portfolio/images/portfolio.png);
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: 700px auto;
-   background-attachment: fixed;
+    width: 1000px;
+    margin: 600px auto 600px auto;
+    background-image: url(../hw17-portfolio/images/portfolio.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 700px auto;
+    background-attachment: fixed;
 
    
    
 }
+
+
 
 
 
@@ -202,4 +202,87 @@ footer{
     width: 100%;
     z-index: 1;
 
+}
+
+
+/*Test*/
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body { font-family: sans-serif; }
+
+.gallery {
+  background: #EEE;
+}
+
+.gallery-cell {
+  width: 100%;
+  height: 200px;
+  margin-right: 10px;
+  background: #8C8;
+  counter-increment: gallery-cell;
+}
+
+/* cell number */
+.gallery-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
+
+.gallery-cell.is-selected {
+  background: #ED2;
+}
+
+* big buttons, no circle */
+.flickity-prev-next-button {
+  width: 100px;
+  height: 100px;
+  background: transparent;
+}
+/* arrow color */
+.flickity-prev-next-button .arrow {
+  fill: white;
+}
+.flickity-prev-next-button.no-svg {
+  color: white;
+}
+.flickity-prev-next-button:hover {
+  background: transparent;
+}
+/* hide disabled button */
+.flickity-prev-next-button:disabled {
+  display: none;
+}
+
+/* position dots in gallery */
+.flickity-page-dots {
+  bottom: 0px;
+}
+/* white circles */
+.flickity-page-dots .dot {
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+  background: transparent;
+  border: 2px solid white;
+}
+/* fill-in selected dot */
+.flickity-page-dots .dot.is-selected {
+  background: white;
+}
+
+
+.gallery-cell {
+  width: 100%;
+}
+
+@media screen and ( min-width: 768px ) {
+  /* half-width cells for larger devices */
+  .gallery-cell { width: 50%; }
 }
