added background color

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
 	font-size: 20px;
     line-height: 1.618;
     color: white;
-   /*background-color: #4F7FFF;*/
+   background-color: rgb(242, 242, 242);
    padding-bottom: 150px;
    
 }
