--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,13 +27,13 @@
     background-image: url(../hw17-portfolio/images/background1-01.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     /*background-color: #4F7FFF;*/
     height: 900px;
     transition: all 0.3s ease-in-out;
     position: relative; 
     margin: 0 auto;
-   
-    
+    object-fit: contain;
    
 }
 
@@ -117,6 +117,8 @@ ul {
     display: inline;
     color: blue;
    
+    
+   
   }
   
   li a {
@@ -144,6 +146,7 @@ ul {
 
   .topnav-right{
     float: right;
+    padding-right: 40px;
   }
 
 
