--- a/stylesheet-works.css
+++ b/stylesheet-works.css
@@ -482,11 +482,12 @@ div.image-5 {
   background-color: #F6F3F1;
 }
 
-
 .column {
   float: left;
   width: 25%;
   padding: 10px;
+  margin: auto 0;
+  margin-left: 40px;
 }
 
 /* Clear floats after the columns */
